add: db 연동 후 데이터 삽입 확인
- 쿼리문과 연결되는 메서드명, startTimes에 저장되는 데이터 타입 변경
- LostArkProjectApplication 클래스에 MyBatis가 mapper 패키지 경로를 인식하게 하는 코드 추가